--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <a href="">Logo</a>
     </header>
     <section class="caption">
-        <h1>Lorem ipsum dolor sit amet, consectetur adipisicing.</h1>
+        <h1>The best site ever</h1>
     </section>
     <section class="cards">
         <h2>Lorem ipsum dolor.</h2>
